Implemented the basic execution pipeline for milliseconds and minutes

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = atmelavr
 board = uno
 framework = arduino
 
-; [env:example_blink]
+; [env:ng]
 ; platform = atmelavr
-; board = uno
+; board = ATmega8
 ; framework = arduino
